--- a/homepage.html
+++ b/homepage.html
@@ -45,6 +45,40 @@
 
         </div>
         <div id="Banner">
+            <div id="d1">
+                <ul>
+                    <li>Home/</li>
+                    <li>Category/</li>
+                    <li>
+                        <p>Product title</p>
+                    </li>
+                </ul>
+
+            </div>
+            <h1>Product title</h1>
+            <div id="d2">
+                <div id="evaluate">
+                    <ul>
+                        <li><img src="./hinhanh/Rating 303.png" alt=""></li>
+                        <li>
+                            <p>4.20</p>
+                        </li>
+                        <li>(99 reviews)</li>
+                    </ul>
+
+
+                </div>
+                <div id="share">
+                    <img src="./hinhanh/Heart 23.png" alt="">
+                    <div>Save</div>
+
+
+
+
+                </div>
+
+            </div>
+
 
 
         </div>
